# flake8-Inflammatory-jargon

./: CODEOWNERS  LICENSE  MANIFEST.in  README.MD  Readme.MD  flake8_Inflammatory_jargon_checker.py  flake8_named_arguments.py  requirements.txt  setup.cfg  setup.py
data/: words.json
flake8_inflammatory_jargon/: __about__.py  __init__.py  checker.py
tests/: flake8_Inflammatory_jargon_checker_test.py
tests/test files/: Inflammatory_jargon_case.py  clean_jargon_case.py
