[metadata]
name = flake8_Inflammatory_jargon_checker
version = 0.1.0

[options]
py_modules = flake8_Inflammatory_jargon_checker

install_requires =
    flake8>3.7
    importlib-metadata>0.9;python_version <"3.8"

[options.entry_points]
flake8.extension =
    FNA = flake8_Inflammatory_jargon_checker:Plugin



