[metadata]
name = flake8_Inflammatory_jargon_checker
version = 1.0.1
description-file = README.md

[options]
py_modules = flake8_Inflammatory_jargon_checker

install_requires =
    flake8>3.7
    importlib-metadata>0.9;python_version <"3.8"

[isort]
multi_line_output = 3

[flake8]
max-line-length = 90
max-complexity = 10
